test/spec_vectors/type-rec/ok/module_14.wat
(module (rec (type $f2 (func)) (type (struct))) (func (import "M" "f") (type $f2)))