test/spec_vectors/type-rec/fail/module_2.wat
(module (rec (type (func (param (ref 1))))) (rec (type (func))))